# linphone-desktop

./: Makefile
OUTPUT/desktop/include/linphone++/: account_creator.hh  buffer.hh  call_log.hh  call_stats.hh  conference.hh  config.hh  content.hh  event.hh  factory.hh  friend.hh  friend_list_listener.hh  headers.hh  im_encryption_engine.hh  im_notif_policy.hh  linphone.hh  payload_type.hh  player.hh  presence_model.hh  tunnel.hh  video_definition.hh  xml_rpc_request_listener.hh  xml_rpc_session.hh
OUTPUT/desktop/lib/: libantlr3c.1.dylib  libbctoolbox-tester.1.dylib  libbellesip.0.dylib  libbzrtp.0.dylib  liblinphone.9.dylib  libmbedcrypto.0.dylib  libortp.13.dylib  libortp.dylib
OUTPUT/desktop/lib/pkgconfig/: bctoolbox-tester.pc  bctoolbox.pc  belle-sip.pc  vpx.pc
OUTPUT/desktop/share/BCunit/cmake/: BcUnitConfig.cmake  BcUnitConfigVersion.cmake
OUTPUT/desktop/share/BelleSIP/cmake/: BelleSIPTargets.cmake
OUTPUT/desktop/share/Linphone/: rootca.pem
OUTPUT/desktop/share/Linphone/cmake/: LinphoneTargets-release.cmake
OUTPUT/desktop/share/LinphoneCxx/cmake/: LinphoneCxxTargets-release.cmake
OUTPUT/desktop/share/Mediastreamer2/cmake/: Mediastreamer2Targets-release.cmake
OUTPUT/desktop/share/bcmatroska2/cmake/: BcMatroska2Targets-release.cmake  BcMatroska2Targets.cmake
OUTPUT/desktop/share/bctoolbox/cmake/: BcToolboxConfig.cmake
OUTPUT/desktop/share/bzrtp/cmake/: BZRTPTargets.cmake
OUTPUT/desktop/share/doc/linphone-3.12.0/html/: classes.html  dir_1b07ab7d00cdc4ed73b6537da36bd180.html  dir_efc99ad84d263e00294190b8296b0971.html  functions_vars.html  group__account__creator__request.html  group__authentication.html  group__buddy__tutorials.html  group__call__logs.html  group__call__misc.html  group__conferencing.html  group__event__api.html  group__initializing.html  group__linphone__address.html  group__misc.html  group__notify__tutorials.html  group__tunnel.html  menudata.js  struct__BuddyAddress.html  struct__BuddyLookupFuncs.html  struct__LinphoneSipTransports.html  struct__LinphoneVideoPolicy.html  struct__SipSetup.html
OUTPUT/desktop/share/doc/linphone-3.12.0/xml/: call__stats_8h.xml  conference_8h.xml  dictionary_8h.xml  dir_1b07ab7d00cdc4ed73b6537da36bd180.xml  dir_527496d0944488e897364a6d211c78eb.xml  dir_9662a90d8324b706d67b130a49c96271.xml  doxygen_8dox.xml  error__info_8h.xml  friendlist_8h.xml  group__authentication.xml  group__basic__call__tutorials.xml  group__buddy__tutorials.xml  group__call__misc.xml  group__event__api.xml  group__initializing.xml  group__misc.xml  group__notify__tutorials.xml  group__registration__tutorials.xml  group__wrapper.xml  info__message_8h.xml  linphonecore_8h.xml  nat__policy_8h.xml  proxy__config_8h.xml  realtimetext__sender_8c.xml  registration_8c.xml  struct__BuddyInfo.xml  struct__BuddyLookupFuncs.xml  struct__BuddyLookupRequest.xml  struct__LinphoneCoreVTable.xml  struct__LinphoneRtpTransportFactories.xml  video__definition_8h.xml  wrapper__utils_8h.xml
OUTPUT/desktop/share/doc/mediastreamer2-2.16.1/html/: group__audio__stream__api.html  group__mediastreamer2__init.html  group__mediastreamer2__intro.html  mediastreamer2_install.html  mediastreamer2_license.html  mediastreamer2_readme.html  pages.html
OUTPUT/desktop/share/doc/ortp-1.0.2/html/: dir_0578ac8ed6d9c718bb4229df0888daf5.html  dir_56ab9a32050f12272c302af9454f020f.html  globals.html  globals_eval.html  payloadtype_8h.html  rtpsession_8h.html  structOrtpRtcpTmmbrInfo.html  structOrtpRtcpXrMediaCallbacks.html  structOrtpRtcpXrStats.html  struct__OrtpMemoryFunctions.html  struct__OrtpPayloadType.html  struct__OrtpVideoBandwidthEstimator.html  (+17 more)
OUTPUT/desktop/share/oRTP/cmake/: ORTPConfig.cmake  ORTPTargets-release.cmake
WORK/desktop/cmake/: CMakeCache.txt  EP_vpx_build.sh  EP_vpx_configure.sh  EP_vpx_install.sh  Makefile  cmake_install.cmake
WORK/desktop/cmake/Autotools/: Autotools.cmake  CMakeCache.txt  Makefile  cmake_install.cmake
WORK/desktop/tmp/EP_antlr3c/: EP_antlr3c-cfgcmd.txt
WORK/desktop/tmp/EP_bctoolbox/: EP_bctoolbox-cfgcmd.txt
WORK/desktop/tmp/EP_bcunit/: EP_bcunit-cfgcmd.txt
WORK/desktop/tmp/EP_belcard/: EP_belcard-cfgcmd.txt
WORK/desktop/tmp/EP_bellesip/: EP_bellesip-cfgcmd.txt
WORK/desktop/tmp/EP_belr/: EP_belr-cfgcmd.txt
WORK/desktop/tmp/EP_bv16/: EP_bv16-cache-Release.cmake  EP_bv16-cfgcmd.txt
WORK/desktop/tmp/EP_bzrtp/: EP_bzrtp-cfgcmd.txt
WORK/desktop/tmp/EP_gsm/: EP_gsm-cfgcmd.txt
WORK/desktop/tmp/EP_linphone/: EP_linphone-cfgcmd.txt
WORK/desktop/tmp/EP_linphoneqt/: EP_linphoneqt-cfgcmd.txt
WORK/desktop/tmp/EP_matroska2/: EP_matroska2-cfgcmd.txt
WORK/desktop/tmp/EP_mbedtls/: EP_mbedtls-cfgcmd.txt
WORK/desktop/tmp/EP_ms2/: EP_ms2-cfgcmd.txt
WORK/desktop/tmp/EP_ms2plugins/: EP_ms2plugins-cfgcmd.txt
WORK/desktop/tmp/EP_mswebrtc/: EP_mswebrtc-cfgcmd.txt
WORK/desktop/tmp/EP_opus/: EP_opus-cfgcmd.txt
WORK/desktop/tmp/EP_ortp/: EP_ortp-cfgcmd.txt
WORK/desktop/tmp/EP_speex/: EP_speex-cfgcmd.txt
WORK/desktop/tmp/EP_srtp/: EP_srtp-cache-Release.cmake  EP_srtp-cfgcmd.txt
WORK/desktop/tmp/EP_turbo-jpeg/: EP_turbo-jpeg-cache-Release.cmake  EP_turbo-jpeg-cfgcmd.txt
WORK/desktop/tmp/EP_vpx/: EP_vpx-cfgcmd.txt
WORK/desktop/tmp/TARGET_linphone_package/: TARGET_linphone_package-cfgcmd.txt
submodules/bcmatroska2/corec/corec/: CMakeLists.txt
submodules/belcard/: belcard.spec
submodules/belle-msrp/: .gitignore  CMakeLists.txt  config.h.cmake  configure.ac
submodules/belle-msrp/cmake/: BelMSRPConfig.cmake.in  FindBelr.cmake
submodules/belle-msrp/include/: CMakeLists.txt  Makefile.am
submodules/belle-msrp/include/belle-msrp/: Makefile.am  belle-msrp.hpp  belle-msrp_parser.hpp
submodules/belle-msrp/src/: CMakeLists.txt  Makefile.am  belle-msrp.cpp  belle-msrp_parser.cpp  msrp_grammar.cpp  msrp_grammar.hpp
submodules/belle-msrp/tests/: CMakeLists.txt  Makefile.am  bellemsrp-header_test.cpp  bellemsrp-request_test.cpp  bellemsrp-response_test.cpp  bellemsrp-tester.cpp  bellemsrp-tester.hpp
submodules/belr/: belr.spec
submodules/mssilk/: CMakeLists.txt
submodules/msx264/: CMakeLists.txt
(+16 files in other folders)
